# listmonk-mcp-bridge

./: .dockerignore  .envrc  .gitignore  CHANGELOG.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  release-please-config.json
.github/workflows/: auto-merge-dependencies.yml  ci.yml  container.yml  docs.yml  publish.yml  release-please.yml  update-flake-lock.yml
docs/: README.md  api-coverage.md  authentication.md  claude-desktop.md  cline.md  configuration.md  container.md  development.md  docker-setup.md  docker.md  index.md  listmonk-api.md  mcp-clients.md  safeguards.md  tools.md  vscode.md  windsurf-cursor.md
src/listmonk_mcp/: __init__.py  client.py  config.py  exceptions.py  models.py  server.py
tests/: test_listmonk_behavior.py  test_live_helper_smoke.py  test_llm_helpers.py  test_production_alignment.py  test_server.py  test_staging_smoke.py
